--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<div class="navbar-item has-dropdown is-hoverable">
 								<p class="navbar-item is-active"> Are You A Member ?</p>
 								<span class="navbar-item">
-									<a href="./office.html" target="_blank" class="button is-info is-inverted">
+									<a href="./office.html" target="_blank" class="button is-info is-inverted" id="HyperLink2" onclick="return ValidatePassword1();">
 										<span class="icon">
 											<i class="fas fa-sign-in-alt"></i>
 										</span>
