--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="./images/favicon.ico.ico" />
 </head>
 
@@ -285,10 +286,80 @@
 								of Famous Brands</p>
 						</div>
 					</div>
+
+					<u>
+						<h2 class="title center has-text-white">Our Team</h2>
+					</u>
+					<div class="columns mt-1">
+
+						<div class="column is-one-quarter">
+							<div class="card our-team has-background-info-light">
+								<img src="./images/teamwork.jpg" alt="John" style="width:100%">
+								<h1 class="is-size-4">Steven Ferreira</h1>
+								<p class="title">CEO</p>
+								<p>Dail n Dine</p>
+								<div style="margin: 24px 0;">
+									<a href="#"><i class="fas fa-envelope"></i></a>
+									<a href="#"><i class="fab fa-twitter-square"></i></a>
+									<a href="#"><i class="fab fa-facebook-square"></i></a>
+									<a href="#"><i class="fab fa-linkedin"></i></a>
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
+
+						<div class="column is-one-quarter">
+							<div class="card our-team has-background-info-light">
+								<img src="./images/teamwork.jpg" alt="John" style="width:100%">
+								<h1 class="is-size-4">Nomsa Nxumalo</h1>
+								<p class="title">Senior Manager</p>
+								<p>Dail n Dine</p>
+								<div style="margin: 24px 0;">
+									<a href="#"><i class="fas fa-envelope"></i></a>
+									<a href="#"><i class="fab fa-twitter-square"></i></a>
+									<a href="#"><i class="fab fa-facebook-square"></i></a>
+									<a href="#"><i class="fab fa-linkedin"></i></a>
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
+
+						<div class="column is-one-quarter">
+							<div class="card our-team has-background-info-light">
+								<img src="./images/teamwork.jpg" alt="John" style="width:100%">
+								<h1 class="is-size-4">Junior Managers</h1>
+								<p class="title">Supervisors</p>
+								<p>Dail n Dine</p>
+								<div style="margin: 24px 0;">
+									<a href="#"><i class="fas fa-envelope"></i></a>
+									<a href="#"><i class="fab fa-twitter-square"></i></a>
+									<a href="#"><i class="fab fa-facebook-square"></i></a>
+									<a href="#"><i class="fab fa-linkedin"></i></a>
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
+
+						<div class="column is-one-quarter">
+							<div class="card our-team has-background-info-light">
+								<img src="./images/teamwork.jpg" alt="John" style="width:100%">
+								<h1 class="is-size-4">Quality Team</h1>
+								<p class="title">Qualit Assurance</p>
+								<p>Dail n Dine</p>
+								<div style="margin: 24px 0;">
+									<a href="#"><i class="fas fa-envelope"></i></a>
+									<a href="#"><i class="fab fa-twitter-square"></i></a>
+									<a href="#"><i class="fab fa-facebook-square"></i></a>
+									<a href="#"><i class="fab fa-linkedin"></i></a>
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
+
+					</div>
 				</section>
 			</div>
 		</div>
-
 		<!------------------------------Tesimonials-------------------------------->
 		<section class="section">
 			<div id="testimon" class="container testinimon is-fluid pt-3 ">
@@ -503,7 +574,7 @@
 		</section>
 	</section>
 
-	<!----------------------------------------------footer-------------------------------------------------------->
+	<!-------------------------footer------------------------------------------->
 	<div class="partners-footer">
 		<footer class="footer has-text-dark">
 			<div class="container">
