--- a/office.html
+++ b/office.html
@@ -13,7 +13,7 @@
 
 <body>
   <section class="hero is-info is-small">
-    <div class="hero-head">
+    <div  id="back-to-top"  class="hero-head">
       <nav class="navbar">
         <div class="container">
           <div class="navbar-brand">
@@ -55,7 +55,7 @@
       </nav>
     </div>
 
-    <div id="back-to-top" class="hero-body">
+    <div class="hero-body">
       <div class="container has-text-centered">
         <p class="title">Our Cloud Office</p>
         <p class="subtitle is-size-6"><i>"The art of Performance"</i></p>
