--- a/office.html
+++ b/office.html
@@ -39,7 +39,7 @@
                 href="https://drive.google.com/drive/folders/1fQogtY11u70m2in3m061jBKLzOusjvRW?usp=sharing"
                 id="HyperLink1" onclick="return ValidatePassword();" class="navbar-item"> Tools </a>
 
-              <a class="navbar-item"> Forms </a>
+              <a href="./forms/index.html" target="_blank" class="navbar-item"> Forms </a>
               <span class="navbar-item">
                 <a href="https://join.slack.com/t/dialndine/shared_invite/zt-rujxd0k2-BaeGPsJYldCA5zfBAHB3Mg"
                   target="_blank" class="button is-info is-inverted">
