--- a/office.html
+++ b/office.html
@@ -958,14 +958,14 @@
               <div class="w3-container">
                 <figure class="image is-2by1">
                   <img src="./images/Dash5.png" style="width:100%;cursor:zoom-in"
-                    onclick="document.getElementById('modal05').style.display='block'">
+                     onclick='document.getElementById("modal05").style.display="block";document.getElementById("dash5").src="https:/\/datastudio.google.com/embed/reporting/6960b1f2-db1f-4f65-8491-51684dca0423/page/95gGC"'>
                 </figure>
 
                 <div id="modal05" class="w3-modal" onclick="this.style.display='none'">
                   <span class="w3-button has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
                   <div class="w3-modal-content w3-animate-zoom">
-                    <iframe width="100%" height="650" class="is-fullwidth"
-                      src="https://datastudio.google.com/embed/reporting/6960b1f2-db1f-4f65-8491-51684dca0423/page/95gGC"
+                    <iframe id="dash5" width="100%" height="650" class="is-fullwidth"
+                      src=""
                       frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
                   </div>
                 </div>
