--- a/office.html
+++ b/office.html
@@ -71,7 +71,9 @@
               <a><i class="fas fa-network-wired"></i>&nbsp;Overview</a>
             </li>
             <li class="tab"
-              onclick='openTab(event,"perf");document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC"'>
+             onclick='openTab(event,"perf");myFunction(event);document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC";
+                document.getElementById("quote").innerHTML="I hope you are having a great day 😉\!";
+                document.getElementById("subhead").innerHTML="Dashboards & Reports"'>
               <a><i class="fas fa-chart-area"></i>&nbsp;Performances</a>
             </li>
             <li class="tab" onclick="openTab(event,'proj')">
