--- a/office.html
+++ b/office.html
@@ -1208,11 +1208,11 @@
     </svg>
   </div>
   <!-------------End of Page----------------->
-  <script async type="text/javascript" src="../js/bulma.js"></script>
+  <script defer type="text/javascript" src="../js/bulma.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-a11y="true"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./script.js"></script>
+  <script defer src="./script.js"></script>
 </body>
 
 </html>
