--- a/office.html
+++ b/office.html
@@ -70,7 +70,7 @@
             <li class="tab is-active" onclick="openTab(event,'over')">
               <a><i class="fas fa-network-wired"></i>&nbsp;Overview</a>
             </li>
-            <li class="tab" onclick='openTab(event,"perf");myFunction1()'>
+            <li class="tab" onclick='openTab(event,"perf");myFunction1();refreshIframe()'>
               <a><i class="fas fa-chart-area"></i>&nbsp;Performances</a>
             </li>
             <li class="tab" onclick="openTab(event,'proj')">
@@ -377,7 +377,7 @@
               </ul>
           </aside>
         </div>
-        <!-------------------------Dashboard   A---------------------------- -->
+        <!-------------------------Dashboard ---------------------------- -->
         <div class="column dash-content has-background-info-dark ml-1 is-9">
           <section class="hero has-background-black-ter dash-top is-small">
             <div class="hero-body">
@@ -420,7 +420,7 @@
             </nav>
           </section>
           <div style="width: 100%; height:500px " class="mt-1 iframe-container">
-            <iframe width="100%" height="100%" id="dashboards" class="is-fullwidth" src="" frameborder="0"
+            <iframe width="100%" height="100%" name="dashboards" id="dashboards" class="is-fullwidth" src="" frameborder="0"
               style="border:0" scrolling="no" scroll="no"  allowfullscreen style="width:100%"></iframe>
           </div>
         </div>
