--- a/office.html
+++ b/office.html
@@ -196,13 +196,8 @@
         <div class="columns">
           <div class="column">
             <div class="card card-equal-height has-text-info-light has-background-info is-size-7">
-              <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="./images/tracking.jpg">
-                </figure>
-              </div>
               <div class="card-content">
-                <p class="title is-4 center">Tracking Performances</p>
+                <p class="title is-4 center has-text-info-light">Tracking Performances</p>
                 <div class="content">
                   <p>
                     Call center agent’s priority is making their day-to-day jobs run smoothly. Unlike managers or
@@ -221,15 +216,11 @@
               </div>
             </div>
           </div>
+
           <div class="column">
             <div class="card card-equal-height has-text-info-light has-background-info is-size-7">
-              <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="./images/feedback.png" style="max-width: 1000px;">
-                </figure>
-              </div>
               <div class="card-content">
-                <p class="title is-4 center">Importance of Feedback</p>
+                <p class="title is-4 center has-text-info-light">Importance of Feedback</p>
                 <div class="content">
                   <p>
                     Working as an agent is a stressful endeavor, and it’s up to managers to cultivate a positive
@@ -249,15 +240,11 @@
               </div>
             </div>
           </div>
+
           <div class="column">
             <div class="card card-equal-height has-text-info-light  has-background-info is-size-7">
-              <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="./images/advantage.png" style="max-width: 1000px;">
-                </figure>
-              </div>
               <div class="card-content">
-                <p class="title is-4 center">Advantages of Cloud Office</p>
+                <p class="title is-4 center has-text-info-light">Advantages of Cloud Office</p>
                 <div class="content">
                   <p>
                     Cloud office offers our call center many benefits: It allows us to update and give feedback on
