--- a/office.html
+++ b/office.html
@@ -310,14 +310,14 @@
                 <a>Call Center Credits</a>
               </li>
 
-              <li class="board" onclick='document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/c5071f7b-23ac-4a94-9856-5ea7547f1dff/page/jKlQC";
+              <li class="board" onclick='ValidatePassword();document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/c5071f7b-23ac-4a94-9856-5ea7547f1dff/page/jKlQC";
                                             document.getElementById("quote").innerHTML="\"Unless you love everybody, you can’t sell anybody.\" – Dicky Fox 🛍";
                                             document.getElementById("subhead").innerHTML="Restaurants Performance"'>
                 <a>Restaurants Performance</a>
               </li>
 
               <li class="board"
-                onclick='document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/49454e7b-3ef0-4d81-9d68-70a2d118fdf4/page/jKlQC";
+                onclick='ValidatePassword();document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/49454e7b-3ef0-4d81-9d68-70a2d118fdf4/page/jKlQC";
                                                           document.getElementById("quote").innerHTML="\"Customer service is about empathy.\" - Chaz Van de Motter😊";
                                                           document.getElementById("subhead").innerHTML="Queries & Incomplete Calls"'>
                 <a>Queries & Incomplete Calls</a>
@@ -333,14 +333,14 @@
                 <i class="fas fa-file-signature"></i>&nbsp;Disciplinary
               </p>
               <ul class="menu-list" onclick="myFunction(event)">
-                <li class="board" onclick='document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/87519d28-32cd-4408-813d-058e8ddd3887/page/hQAwB";
+                <li class="board" onclick='ValidatePassword();document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/87519d28-32cd-4408-813d-058e8ddd3887/page/hQAwB";
                                               document.getElementById("quote").innerHTML="Discipline is the key to success.";
                                               document.getElementById("subhead").innerHTML="Warning Tracker"'>
                   <a>Warning Tracker</a>
                 </li>
 
                 <li class="board"
-                  onclick='document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/6960b1f2-db1f-4f65-8491-51684dca0423/page/95gG";
+                  onclick='ValidatePassword();document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/6960b1f2-db1f-4f65-8491-51684dca0423/page/95gG";
                                                                           document.getElementById("quote").innerHTML="Without discipline there is no life at all.";
                                                                            document.getElementById("subhead").innerHTML="Adherence To Work Schedules"'>
                   <a>Adherence To Work Schedules</a>
