--- a/office.html
+++ b/office.html
@@ -362,7 +362,7 @@
             document.getElementById('sidenav').style.pointerEvents='inherit';" class="delete"></button>
             <h4 class="mt-5 has-text-light has-text-weight-bold center">ENTER PASSWORD</h4>
             <form action="javascript:;" onsubmit="restaurants(this)">
-              <p id="response" class=" has-text-white center"></p>
+              <p id="response" class=" has-text-white center">Restricted Access 🔒</p>
               <div class="field mt-5 center">
                 <p class="control has-icons-left">
                   <input class="input" id="password" name="pass" type="password" placeholder="********" required>
@@ -381,10 +381,10 @@
                         document.getElementById('sidenav').style.pointerEvents='inherit';" class="delete"></button>
             <h4 class="mt-5 has-text-light has-text-weight-bold center">ENTER PASSWORD</h4>
             <form action="javascript:;" onsubmit="queries(this)">
-              <p id="response" class=" has-text-white center"></p>
+              <p id="response1" class=" has-text-white center">Restricted Access 🔒</p>
               <div class="field mt-5 center">
                 <p class="control has-icons-left">
-                  <input class="input" id="password" name="pass" type="password" placeholder="********" required>
+                  <input class="input" id="password1" name="pass" type="password" placeholder="********" required>
                   <span class="icon is-small is-left">
                     <i class="fas fa-lock"></i>
                   </span>
@@ -400,10 +400,10 @@
                         document.getElementById('sidenav').style.pointerEvents='inherit';" class="delete"></button>
             <h4 class="mt-5 has-text-light has-text-weight-bold center">ENTER PASSWORD</h4>
             <form action="javascript:;" onsubmit="warnings(this)">
-              <p id="response" class=" has-text-white center"></p>
+              <p id="response2" class=" has-text-white center">Restricted Access 🔒</p>
               <div class="field mt-5 center">
                 <p class="control has-icons-left">
-                  <input class="input" id="password" name="pass" type="password" placeholder="********" required>
+                  <input class="input" id="password2" name="pass" type="password" placeholder="********" required>
                   <span class="icon is-small is-left">
                     <i class="fas fa-lock"></i>
                   </span>
@@ -419,10 +419,10 @@
                         document.getElementById('sidenav').style.pointerEvents='inherit';" class="delete"></button>
             <h4 class="mt-5 has-text-light has-text-weight-bold center">ENTER PASSWORD</h4>
             <form action="javascript:;" onsubmit="adherence(this)">
-              <p id="response" class=" has-text-white center"></p>
+              <p id="response3" class=" has-text-white center">Restricted Access 🔒</p>
               <div class="field mt-5 center">
                 <p class="control has-icons-left">
-                  <input class="input" id="password" name="pass" type="password" placeholder="********" required>
+                  <input class="input" id="password3" name="pass" type="password" placeholder="********" required>
                   <span class="icon is-small is-left">
                     <i class="fas fa-lock"></i>
                   </span>
