--- a/office.html
+++ b/office.html
@@ -526,7 +526,7 @@
               </div>
             </nav>
           </section>
-          <div style="width: 100%; height:500px " class="mt-1 iframe-container">
+          <div id="dashboard-container" style="width: 100%; height:500px " class="mt-1 iframe-container">
             <iframe width="100%" height="100%" name="dashboards" id="dashboards" class="is-fullwidth" src=""
               frameborder="0" style="border:0" scrolling="no" scroll="no" allowfullscreen style="width:100%"></iframe>
           </div>
