--- a/office.html
+++ b/office.html
@@ -112,7 +112,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <p class="title">Our Cloud Office</p>
-        <p class="subtitle is-size-6"><i>"The art of Performance"</i></p>
+        <p class="subtitle is-size-6">The art of Performance</p>
       </div>
     </div>
 
@@ -536,10 +536,14 @@
               </div>
             </nav>
           </section>
-          <div id="dashboard-container" style="width: 100%; height:500px " class="mt-1 iframe-container">
-            <iframe width="100%" height="100%" name="dashboards" id="dashboards" class="is-fullwidth" src=""
-              frameborder="0" style="border:0" scrolling="no" scroll="no" allowfullscreen style="width:100%"></iframe>
+          <div>
+            <div class="mt-1 iframe-container" style="position:relative;padding-top:51.25%;">
+              <iframe name="dashboards" id="dashboards"
+                src="https://datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC"
+                frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+            </div>
           </div>
+
         </div>
       </div>
       <!------------------------- End of Dashboards ---------------------------- -->
