--- a/office.html
+++ b/office.html
@@ -539,7 +539,7 @@
           <div>
             <div class="mt-1 iframe-container" style="position:relative;padding-top:51.25%;">
               <iframe name="dashboards" id="dashboards"
-                src="https://datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC"
+                src=""
                 frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
             </div>
           </div>
