--- a/office.html
+++ b/office.html
@@ -896,7 +896,7 @@
 
     <!-------------------------Start of Incentives---------------------------- -->
     <div id="incent" class="content-tab center" style="display: none">
-      <div class="container has-background-info">
+      <div class="container">
 
         <div class="column has-background-info">
           <p class="is-size-4 has-text-weight-bold pt-5"><i class="fas fa-award"></i>Incentives</p>
@@ -974,60 +974,7 @@
             </div>
           </div>
         </div>
-
-        <div id="incentive" class="columns mt-5">
-          <div class="column is-half">
-            <article class=" is-info">
-              <div class="subtitle center">
-                <p class="has-text-weight-bold has-text-white">Upsell Updates On Slack</p>&nbsp;<button
-                  class="button is-dark"><a href="https://dialndine.slack.com/archives/C01J9DLFQJH"><i
-                      class="fab fa-slack"></i></a></button>
-              </div>
-
-              <div class="w3-container">
-                <figure class="image is-2by1">
-                  <img src="./images/update.jpg" style="width:100%;cursor:zoom-in"
-                    onclick="document.getElementById('modal01').style.display='block'">
-                </figure>
-
-                <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
-                  <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                  <div class="w3-modal-content w3-animate-zoom">
-                    <iframe width="100%" height="650" class="is-fullwidth"
-                      src="https://datastudio.google.com/embed/reporting/6960b1f2-db1f-4f65-8491-51684dca0423/page/95gGC"
-                      frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
-                  </div>
-                </div>
-              </div>
-            </article>
-          </div>
-
-          <div class="column is-half">
-            <article class=" is-info">
-              <div class="subtitle center">
-                <p class="has-text-weight-bold has-text-white">Compliments Report</p>&nbsp;<button
-                  class="button is-dark">Click Image To
-                  View</button>
-              </div>
-
-              <div class="w3-container">
-                <figure class="image is-2by1">
-                  <img src="./images/Dash5.png" style="width:100%;cursor:zoom-in"
-                    onclick='document.getElementById("modal05").style.display="block";document.getElementById("dash5").src="https:/\/datastudio.google.com/embed/reporting/6960b1f2-db1f-4f65-8491-51684dca0423/page/95gGC"'>
-                </figure>
-
-                <div id="modal05" class="w3-modal" onclick="this.style.display='none'">
-                  <span class="w3-button has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                  <div class="w3-modal-content w3-animate-zoom">
-                    <iframe id="dash5" width="100%" height="650" class="is-fullwidth" src="" frameborder="0"
-                      style="border:0" allowfullscreen style="width:100%"></iframe>
-                  </div>
-                </div>
-              </div>
-            </article>
-          </div>
         </div>
-      </div>
 
     </div>
     <!------------------------End of Incentive------------------------->
